# TextExcelPort

./: Cargo.toml  README.md
.github/: dependabot.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: bst.rs  console.rs  exec.rs  grid.rs  lib.rs  structures.rs
core/src/statcrunching/: iqr.rs  mod.rs
core/src/structures/: boxBST.rs  mod.rs  rcBST.rs  rc_bst.rs  rc_graph.rs  rc_node.rs
core/tests/: box_struct_rust.rs  grid_test.rs  rc_struct_test.rs  rcnode_benchmark.rs  stat_test.rs
gui/: Cargo.toml
gui/backend/: grid.rs  mod.rs  mvc.rs
gui/src/: main.rs
gui/src/backend/: messages.rs  mod.rs  mvc.rs  styles.rs  toolbar.rs
src/: lib.rs  main.rs
textexcel_gui/: Cargo.toml
textexcel_gui/src/: main.rs
textexcel_gui/src/backend/: macro_screen.rs  messages.rs  mod.rs  mvc.rs  stat_screen.rs  styles.rs  toolbar.rs
textexcel_gui/src/backend/display/: display_file.rs
