[package]
name = "cli"
version = "0.1.0"
authors = ["Triscuit <54428989+Triscuit-circuit@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive","rc"] }
serde_json = "1.0"
getopts = "0.2.21"
anyhow = "1.0"
async-trait = "0.1.42"
crossterm = "0.18"
textexcelport_core = {version = "0.1.0", path = "../core" }

[dev-dependencies]
regex = "1"
filetime = "0.2"
tempfile = "3"
