[package]
name = "gui"
version = "0.0.6"
authors = ["tzip"]
edition = "2018"

[dependencies]
serde = { version = "1.0.90", features = ["derive","rc"] }
serde_json = "1.0"
yard = "0.2.5"
iced = {version = "*", features = ["canvas", "tokio", "debug"]}
iced_native = "*"
getopts = "0.2.21"
textexcelport_core = {version = "0.1.0", path = "../core" }
